# modbus-connection

./: .gitignore  MIGRATION_FINDINGS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/modbus_connection/: __init__.py  _callbacks.py  _pacing.py  _protocol.py  _types.py  decode.py  encode.py  exceptions.py  mock.py  model.py  pytest_plugin.py
src/modbus_connection/model/: __init__.py  _planning.py  _repeating.py  _writing.py  component.py  component_group.py  fields.py  manual.py  repeating.py  sunspec.py
src/modbus_connection/pymodbus/: __init__.py
src/modbus_connection/tmodbus/: __init__.py
tests/: conftest.py  test_ascii_over_tcp.py  test_backends.py  test_connect_errors.py  test_decode.py  test_encode.py  test_framer_guard.py  test_manual.py  test_mock.py  test_model.py  test_pacing.py  test_protocol.py  test_repeating.py  test_rtu_over_tcp.py  test_serial.py  test_sunspec.py  test_tls.py  test_tmodbus.py  test_udp.py
